// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File import CAMT.053 import works 1`] = `
Array [
  Object {
    "acct": "one",
    "amount": 60,
    "category": null,
    "cleared": 1,
    "date": 20131230,
    "description": "id2",
    "error": null,
    "financial_id": "2013123001153870000",
    "id": "id5",
    "imported_description": "Testkonto Nummer 2",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "Sammler aus Testknto 2 Zweite Ueberweisung EREF:
                                STZV-EtE28122013-11:29-1 IBAN: DE58740618130100033626 BIC:
                                GENODEF1PFK ABWE: Testkonto 1",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": 50,
    "category": null,
    "cleared": 1,
    "date": 20131230,
    "description": "id2",
    "error": null,
    "financial_id": "2013123001153870001",
    "id": "id6",
    "imported_description": "Testkonto Nummer 2",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "Sammler aus Testkonto 2 Erste Ueberweisung EREF:
                                STZV-EtE28122013-11:29-2 IBAN: DE58740618130100033626 BIC:
                                GENODEF1PFK ABWE: Testkonto 1",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -8985,
    "category": null,
    "cleared": 1,
    "date": 20240311,
    "description": "id3",
    "error": null,
    "financial_id": "640387810124072/2",
    "id": "id7",
    "imported_description": "Supermarkt A",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": 120,
    "category": null,
    "cleared": 1,
    "date": 20140105,
    "description": null,
    "error": null,
    "financial_id": "2014010509572410000",
    "id": "id8",
    "imported_description": null,
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "Retoure SEPA Lastschrift vom 03.01.2014, Rueckgabegrund: MD06
                                Lastschriftwiderspruch durch den Zahlungspflichtigen EREF:
                                STZV-EtE27122013-11 :05-2 CRED: DE79ZZZ00000000584 IBAN: DE14740618130000033626 BIC:
                                GENODEF1PFK ABWE: Testkonto",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -8000,
    "category": null,
    "cleared": 1,
    "date": 20240312,
    "description": "id4",
    "error": null,
    "financial_id": "367406715024072/1",
    "id": "id9",
    "imported_description": "Rega",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": 225,
    "category": null,
    "cleared": 1,
    "date": 20140103,
    "description": "id2",
    "error": null,
    "financial_id": null,
    "id": "id10",
    "imported_description": "Testkonto Nummer 2",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "Lastschrift 2. Zahlung TAN:747216 ",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": 120,
    "category": null,
    "cleared": 1,
    "date": 20140103,
    "description": "id2",
    "error": null,
    "financial_id": null,
    "id": "id11",
    "imported_description": "Testkonto Nummer 2",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "Lastschrift 1. Zahlung TAN:747216 ",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
]
`;

exports[`File import handles html escaped plaintext 1`] = `
Array [
  Object {
    "acct": "one",
    "amount": -100,
    "category": null,
    "cleared": 1,
    "date": 20230509,
    "description": "id2",
    "error": null,
    "financial_id": "23129130032333396279270000",
    "id": "id4",
    "imported_description": "000000000000000",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "PREAUTHORIZED DEBIT;B.C. HYDRO & POWER AUTHORITY;Electronic Funds Transfer",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -100,
    "category": null,
    "cleared": 1,
    "date": 20230301,
    "description": "id3",
    "error": null,
    "financial_id": "23060061032549554596530000",
    "id": "id5",
    "imported_description": "TPAY <DEFTPYMT>",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "PREAUTHORIZED DEBIT;LUXMORE REALTY PPTY MGMT;Electronic Funds Transfer",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
]
`;

exports[`File import handles non-ASCII characters 1`] = `
Array [
  Object {
    "acct": "one",
    "amount": -2000,
    "category": null,
    "cleared": 1,
    "date": 20221019,
    "description": "id2",
    "error": null,
    "financial_id": "wSoKuCS77",
    "id": "id3",
    "imported_description": "Paiement facture/Carte prépayée",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": "PWW",
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
]
`;

exports[`File import ofx import works (credit card) 1`] = `
Array [
  Object {
    "acct": "one",
    "amount": -600,
    "category": null,
    "cleared": 1,
    "date": 20230330,
    "description": "id2",
    "error": null,
    "financial_id": "57f91dca-0460-4692-be90-84165b7002",
    "id": "id3",
    "imported_description": "LOUISIANA STATE MUSEUM751 PLACE JOHN PAUL NEW ORLEANS 70116-3205LA USA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
]
`;

exports[`File import ofx import works 1`] = `
Array [
  Object {
    "acct": "one",
    "amount": -3000,
    "category": null,
    "cleared": 1,
    "date": 20190123,
    "description": "id2",
    "error": null,
    "financial_id": "00092990122-30.00019012312798.01",
    "id": "id10",
    "imported_description": "PATIENT FIRST TOKEN 01/22 PURCHA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -377,
    "category": null,
    "cleared": 1,
    "date": 20190123,
    "description": "id3",
    "error": null,
    "financial_id": "00092990121-3.77019012312828.01",
    "id": "id11",
    "imported_description": "STARBUCKS STORE 07604 01/21 PURC",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -962,
    "category": null,
    "cleared": 1,
    "date": 20190123,
    "description": "id3",
    "error": null,
    "financial_id": "00092990121-9.62019012312831.78",
    "id": "id12",
    "imported_description": "STARBUCKS STORE 07604 01/21 PURC",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -11599,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id4",
    "error": null,
    "financial_id": "00090231800-115.99019012212841.40",
    "id": "id13",
    "imported_description": "VERIZON DES:PAYMENTREC ID:XXXXX3",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -1034,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id5",
    "error": null,
    "financial_id": "00092990120-10.34019012212957.39",
    "id": "id14",
    "imported_description": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -2253,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id5",
    "error": null,
    "financial_id": "00092990120-22.53019012212967.73",
    "id": "id15",
    "imported_description": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -10871,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id6",
    "error": null,
    "financial_id": "00092990119-108.71019012212990.26",
    "id": "id16",
    "imported_description": "TMOBILE*AUTO PAY 01/19 PURCHASE",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -2500,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id7",
    "error": null,
    "financial_id": "00092990118-25.00019012213098.97",
    "id": "id17",
    "imported_description": "COUNTY WASTE 01/18 PURCHASE 804-",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -3238,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id8",
    "error": null,
    "financial_id": "00092990118-32.38019012213123.97",
    "id": "id18",
    "imported_description": "REGENCY MART CITGO 01/18 PURCHAS",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -607,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id9",
    "error": null,
    "financial_id": "00092990117-6.07019012213156.35",
    "id": "id19",
    "imported_description": "CHICK-FIL-A #01342 01/17 PURCHAS",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
]
`;

exports[`File import qfx import works 1`] = `
Array [
  Object {
    "acct": "one",
    "amount": -3000,
    "category": null,
    "cleared": 1,
    "date": 20190123,
    "description": "id2",
    "error": null,
    "financial_id": "00092990122-30.00019012312798.01",
    "id": "id10",
    "imported_description": "PATIENT FIRST TOKEN 01/22 PURCHA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -377,
    "category": null,
    "cleared": 1,
    "date": 20190123,
    "description": "id3",
    "error": null,
    "financial_id": "00092990121-3.77019012312828.01",
    "id": "id11",
    "imported_description": "STARBUCKS STORE 07604 01/21 PURC",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -962,
    "category": null,
    "cleared": 1,
    "date": 20190123,
    "description": "id3",
    "error": null,
    "financial_id": "00092990121-9.62019012312831.78",
    "id": "id12",
    "imported_description": "STARBUCKS STORE 07604 01/21 PURC",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -11599,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id4",
    "error": null,
    "financial_id": "00090231800-115.99019012212841.40",
    "id": "id13",
    "imported_description": "VERIZON DES:PAYMENTREC ID:XXXXX3",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -1034,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id5",
    "error": null,
    "financial_id": "00092990120-10.34019012212957.39",
    "id": "id14",
    "imported_description": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -2253,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id5",
    "error": null,
    "financial_id": "00092990120-22.53019012212967.73",
    "id": "id15",
    "imported_description": "URBAN FARMHOUSE NO 2 01/19 PURCH",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -10871,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id6",
    "error": null,
    "financial_id": "00092990119-108.71019012212990.26",
    "id": "id16",
    "imported_description": "TMOBILE*AUTO PAY 01/19 PURCHASE",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -2500,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id7",
    "error": null,
    "financial_id": "00092990118-25.00019012213098.97",
    "id": "id17",
    "imported_description": "COUNTY WASTE 01/18 PURCHASE 804-",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -3238,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id8",
    "error": null,
    "financial_id": "00092990118-32.38019012213123.97",
    "id": "id18",
    "imported_description": "REGENCY MART CITGO 01/18 PURCHAS",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -607,
    "category": null,
    "cleared": 1,
    "date": 20190122,
    "description": "id9",
    "error": null,
    "financial_id": "00092990117-6.07019012213156.35",
    "id": "id19",
    "imported_description": "CHICK-FIL-A #01342 01/17 PURCHAS",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
]
`;

exports[`File import qif import works 1`] = `
Array [
  Object {
    "acct": "one",
    "amount": -2500,
    "category": null,
    "cleared": 1,
    "date": 20181219,
    "description": "id2",
    "error": null,
    "financial_id": null,
    "id": "id19",
    "imported_description": "COUNTY WASTE 12/18 PURCHASE 804-8439288 VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -4500,
    "category": null,
    "cleared": 1,
    "date": 20181219,
    "description": "id3",
    "error": null,
    "financial_id": null,
    "id": "id20",
    "imported_description": "õSSELDORF KÖLN SALON - LIBBIE GR 12/18 PURCHASE RICHMOND VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -3133,
    "category": null,
    "cleared": 1,
    "date": 20181219,
    "description": "id4",
    "error": null,
    "financial_id": null,
    "id": "id21",
    "imported_description": "LOFT 0845 CHES 12/19 PURCHASE RICHMOND VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -631,
    "category": null,
    "cleared": 1,
    "date": 20181219,
    "description": "id5",
    "error": null,
    "financial_id": null,
    "id": "id22",
    "imported_description": "TARGET T- 1130 12/19 PURCHASE Richmond VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -4192,
    "category": null,
    "cleared": 1,
    "date": 20181219,
    "description": "id6",
    "error": null,
    "financial_id": null,
    "id": "id23",
    "imported_description": "TARGET DEBIT CRD ACH TRAN CO ID:XXXXX15170 POS TARGET -1018 RICHMOND V",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -2401,
    "category": null,
    "cleared": 1,
    "date": 20181219,
    "description": "id7",
    "error": null,
    "financial_id": null,
    "id": "id24",
    "imported_description": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9321 CO I",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -1200,
    "category": null,
    "cleared": 1,
    "date": 20181219,
    "description": "id8",
    "error": null,
    "financial_id": null,
    "id": "id25",
    "imported_description": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 9703 CO I",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": 87485,
    "category": null,
    "cleared": 1,
    "date": 20181220,
    "description": "id9",
    "error": null,
    "financial_id": null,
    "id": "id26",
    "imported_description": "BKOFAMERICA MOBILE 12/20 3705340250 DEPOSIT *MOBILE VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -1263,
    "category": null,
    "cleared": 1,
    "date": 20181220,
    "description": "id10",
    "error": null,
    "financial_id": null,
    "id": "id27",
    "imported_description": "AMAZON.COM*M21KD0HA0 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -3600,
    "category": null,
    "cleared": 1,
    "date": 20181220,
    "description": "id11",
    "error": null,
    "financial_id": null,
    "id": "id28",
    "imported_description": "TARGET DEBIT CRD DES:ACH TRAN ID:XXXXX0370723991 INDN:S LONG 6486 CO I",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -521,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id12",
    "error": null,
    "financial_id": null,
    "id": "id29",
    "imported_description": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -3470,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id13",
    "error": null,
    "financial_id": null,
    "id": "id30",
    "imported_description": "AMAZON.COM*M236431E2 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -541,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id12",
    "error": null,
    "financial_id": null,
    "id": "id31",
    "imported_description": "STARBUCKS STORE 07604 12/19 PURCHASE RICHMOND VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -10529,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id14",
    "error": null,
    "financial_id": null,
    "id": "id32",
    "imported_description": "AMAZON.COM*M208P98U1 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -736,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id15",
    "error": null,
    "financial_id": null,
    "id": "id33",
    "imported_description": "AMAZON.COM*M29QF7M71 AM 12/19 PURCHASE AMZN.COM/BILL WA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -1285,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id16",
    "error": null,
    "financial_id": null,
    "id": "id34",
    "imported_description": "AMAZON.COM*M20VB1851 AM 12/20 PURCHASE AMZN.COM/BILL WA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -1299,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id17",
    "error": null,
    "financial_id": null,
    "id": "id35",
    "imported_description": "AMZN MKTP US*M27HH51C2 12/20 PURCHASE AMZN.COM/BILL WA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
  Object {
    "acct": "one",
    "amount": -6278,
    "category": null,
    "cleared": 1,
    "date": 20181221,
    "description": "id18",
    "error": null,
    "financial_id": null,
    "id": "id36",
    "imported_description": "CVS/PHARM 0154 12/21 PURCHASE RICHMOND VA",
    "isChild": 0,
    "isParent": 0,
    "location": null,
    "notes": null,
    "parent_id": null,
    "pending": 0,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transferred_id": null,
    "type": null,
  },
]
`;
